force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <fields>
        <fullName>Has_Loyalty__c</fullName>
    </fields>
    <fields>
        <fullName>Loyalty_Member_Id__c</fullName>
    </fields>
    <fields>
        <fullName>Loyalty_Member_Type__c</fullName>
    </fields>
    <fields>
        <fullName>RCC_Active__c</fullName>
    </fields>
    <fields>
        <fullName>RCC_Card_Number__c</fullName>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
    </fields>
    <fields>
        <fullName>DOB_Month__c</fullName>
    </fields>
    <fields>
        <fullName>DOB_Day__c</fullName>
    </fields>
    <fields>
        <fullName>Pro_License_Number__c</fullName>
    </fields>
    <fields>
        <fullName>Pro_License_Expiry__c</fullName>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
    </fields>
    <fields>
        <fullName>Epsilon_Profile_Id__c</fullName>
    </fields>
</CustomObject>