force-app/main/default/objects/Contact/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO 3166-1 alpha-2 country code. Used for GDPR/CCPA/PIPEDA jurisdiction routing.</description>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>