force-app/main/default/objects/Contact/fields/DOB_Day__c.field-meta.xml
<CustomField>
    <fullName>DOB_Day__c</fullName>
    <description>Date of birth day (1–31). Stored separately from Birthdate to support birthday promotions without exposing full DOB.</description>
    <label>DOB Day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>