force-app/main/default/objects/Contact/fields/DOB_Month__c.field-meta.xml
<CustomField>
    <fullName>DOB_Month__c</fullName>
    <description>Date of birth month (1–12). Stored separately from Birthdate to support birthday promotions without exposing full DOB.</description>
    <label>DOB Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>