force-app/main/default/objects/Contact/fields/Epsilon_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Epsilon_Profile_Id__c</fullName>
    <description>Epsilon CRM profile identifier used for cross-system deduplication and profile sync.</description>
    <externalId>true</externalId>
    <label>Epsilon Profile ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>