force-app/main/default/objects/Contact/fields/Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Date__c</fullName>
    <description>Expected graduation date for Student membership. Student benefits expire after this date.</description>
    <label>Graduation Date</label>
    <type>Date</type>
</CustomField>