force-app/main/default/objects/Contact/fields/Has_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Has_Loyalty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this Contact has an active Loyalty program membership.</description>
    <label>Has Loyalty</label>
    <type>Checkbox</type>
</CustomField>