force-app/main/default/objects/Contact/fields/Loyalty_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Member_Id__c</fullName>
    <description>The unique Loyalty Cloud member identifier assigned at enrollment.</description>
    <externalId>true</externalId>
    <label>Loyalty Member ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>