force-app/main/default/objects/Contact/fields/Loyalty_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Member_Type__c</fullName>
    <description>Loyalty program membership tier/type: Retail, Pro, or Student.</description>
    <label>Loyalty Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
                <default>true</default>
                <label>Retail</label>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>