force-app/main/default/objects/Contact/fields/Pro_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Pro_License_Expiry__c</fullName>
    <description>Expiry date of the professional license. Pro membership benefits are suspended after this date.</description>
    <label>Pro License Expiry</label>
    <type>Date</type>
</CustomField>