force-app/main/default/objects/Contact/fields/Pro_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Pro_License_Number__c</fullName>
    <description>Professional license or business registration number for Pro-tier membership verification.</description>
    <label>Pro License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>