force-app/main/default/objects/Contact/fields/RCC_Active__c.field-meta.xml
<CustomField>
    <fullName>RCC_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the Contact has an active RCC (Retail Centric Card) linked to their loyalty account.</description>
    <label>RCC Active</label>
    <type>Checkbox</type>
</CustomField>