force-app/main/default/objects/Contact/fields/RCC_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>RCC_Card_Number__c</fullName>
    <description>The physical RCC card barcode number imported from the batch file.</description>
    <externalId>true</externalId>
    <label>RCC Card Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>