force-app/main/default/objects/Contact/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>Name of the educational institution for Student-tier membership verification.</description>
    <label>School Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>